fix: Update Jackson annotations to resolve deserialization issues and add missing JsonIgnoreProperties